--- a/config.example.yaml
+++ b/config.example.yaml
@@ -22,8 +22,15 @@ browser:
 # 可选功能配置
 features:
   whisper:
-    enabled: false  # 是否启用 Whisper 转录功能
-    model_path: "./models/ggml-base.bin"  # Whisper 模型文件路径
+    enabled: false  # 默认关闭，需要用户手动安装
+    whisper_cpp_path: "~/whisper.cpp"  # Whisper.cpp 安装路径，支持 ~/path 和 ${VAR} 环境变量
+    model_path: "./models/ggml-base.bin"  # 使用base模型
+    default_model: "auto"  # 智能选择最佳可用模型（推荐设置）
+    language: "zh"  # 识别语言
+    cpu_threads: 4  # CPU线程数
+    timeout_seconds: 1200  # 转换超时时间（秒，20分钟）
+    enable_gpu: true  # 启用GPU加速
+    enable_core_ml: true  # 启用Core ML加速（macOS）
     
 logging:
   level: "info"   # 日志级别: debug, info, warn, error
