feat: 优化Whisper配置，只使用base模型
优化内容：
- ✅ 移除tiny模型依赖，统一使用base模型
- 🧹 删除重复的scripts/setup.sh脚本（功能已被Makefile替代）
- ⚡ 更新下载脚本，只下载base模型和对应的Core ML文件
- 📝 更新GitHub Actions配置，优化模型下载流程
- 📖 更新README说明，明确默认使用base模型

优势：
- 🎯 统一模型选择，减少复杂性
- 📦 减少下载大小（移除74MB的tiny模型）
- 🚀 base模型提供更好的转录质量
- 🧹 代码更简洁，维护更容易

当前models目录：180MB（base模型 + Core ML加速）

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,8 @@ jobs:
           echo "⬇️  下载 ggml-base.bin..."
           curl -L -o ggml-base.bin "https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-base.bin?download=true"
           echo "✅ ggml-base.bin 下载完成"
+        else
+          echo "✅ ggml-base.bin 已存在"
         fi
         
         # 下载 macOS Core ML 模型
