--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -82,7 +82,8 @@ jobs:
         # macOS Apple Silicon - 包含 Core ML 模型
         echo "📦 打包 macOS Apple Silicon (包含 Core ML 加速)..."
         mkdir -p darwin-arm64-package
-        cp bilibili-mcp-darwin-arm64 bilibili-login-darwin-arm64 whisper-init-darwin-arm64 darwin-arm64-package/
+        cp bilibili-mcp-darwin-arm64 bilibili-login-darwin-arm64 darwin-arm64-package/
+        cp ../config.example.yaml darwin-arm64-package/config.yaml
         mkdir -p darwin-arm64-package/models
         cp ../models/ggml-base.bin darwin-arm64-package/models/
         if [ -d "../models/ggml-base.en-encoder.mlmodelc" ]; then
@@ -94,7 +95,8 @@ jobs:
         # macOS Intel - 包含 Core ML 模型
         echo "📦 打包 macOS Intel (包含 Core ML 加速)..."
         mkdir -p darwin-amd64-package
-        cp bilibili-mcp-darwin-amd64 bilibili-login-darwin-amd64 whisper-init-darwin-amd64 darwin-amd64-package/
+        cp bilibili-mcp-darwin-amd64 bilibili-login-darwin-amd64 darwin-amd64-package/
+        cp ../config.example.yaml darwin-amd64-package/config.yaml
         mkdir -p darwin-amd64-package/models
         cp ../models/ggml-base.bin darwin-amd64-package/models/
         if [ -d "../models/ggml-base.en-encoder.mlmodelc" ]; then
@@ -106,7 +108,8 @@ jobs:
         # Windows - 仅基础模型
         echo "📦 打包 Windows (基础模型)..."
         mkdir -p windows-amd64-package
-        cp bilibili-mcp-windows-amd64.exe bilibili-login-windows-amd64.exe whisper-init-windows-amd64.exe windows-amd64-package/
+        cp bilibili-mcp-windows-amd64.exe bilibili-login-windows-amd64.exe windows-amd64-package/
+        cp ../config.example.yaml windows-amd64-package/config.yaml
         mkdir -p windows-amd64-package/models
         cp ../models/ggml-base.bin windows-amd64-package/models/
         zip -r -q bilibili-mcp-${GITHUB_REF#refs/tags/}-windows-amd64.zip windows-amd64-package
@@ -115,7 +118,8 @@ jobs:
         # Linux - 仅基础模型
         echo "📦 打包 Linux (基础模型)..."
         mkdir -p linux-amd64-package
-        cp bilibili-mcp-linux-amd64 bilibili-login-linux-amd64 whisper-init-linux-amd64 linux-amd64-package/
+        cp bilibili-mcp-linux-amd64 bilibili-login-linux-amd64 linux-amd64-package/
+        cp ../config.example.yaml linux-amd64-package/config.yaml
         mkdir -p linux-amd64-package/models
         cp ../models/ggml-base.bin linux-amd64-package/models/
         tar -czf bilibili-mcp-${GITHUB_REF#refs/tags/}-linux-amd64.tar.gz -C linux-amd64-package .
