🔧 修复模型下载链接和构建流程
✅ 核心修复:
- 修正 Core ML 模型下载链接：ggml-base-encoder (非 ggml-base.en-encoder)
- 统一 GitHub Actions 和本地脚本的模型命名
- 优化构建依赖关系，确保模型文件正确嵌入
- 移除不必要的重命名逻辑

🔧 技术改进:
- GitHub Actions 中正确下载 ggml-base-encoder.mlmodelc.zip
- 本地脚本同步更新模型下载链接
- 简化解压流程，避免命名冲突
- 确保构建时模型文件存在

🎯 预期效果:
- GitHub Actions 构建成功
- 190MB 嵌入式可执行文件正常生成
- 所有平台一致的模型文件结构

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,17 +45,17 @@ jobs:
         
         # 下载 macOS Core ML 模型
         echo "🚀 下载 macOS Core ML 加速模型..."
-        if [ ! -f "ggml-base.en-encoder.mlmodelc.zip" ]; then
+        if [ ! -f "ggml-base-encoder.mlmodelc.zip" ]; then
           echo "⬇️  下载 ggml-base Core ML 模型..."
-          curl -L -o ggml-base.en-encoder.mlmodelc.zip "https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-base.en-encoder.mlmodelc.zip?download=true"
+          curl -L -o ggml-base-encoder.mlmodelc.zip "https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-base-encoder.mlmodelc.zip?download=true"
           echo "✅ ggml-base Core ML 模型下载完成"
         fi
         
         # 解压 Core ML 模型
-        if [ -f "ggml-base.en-encoder.mlmodelc.zip" ]; then
+        if [ -f "ggml-base-encoder.mlmodelc.zip" ]; then
           echo "📂 解压 ggml-base Core ML 模型..."
-          unzip -q ggml-base.en-encoder.mlmodelc.zip
-          rm -f ggml-base.en-encoder.mlmodelc.zip
+          unzip -q ggml-base-encoder.mlmodelc.zip
+          rm -f ggml-base-encoder.mlmodelc.zip
           echo "✅ ggml-base Core ML 模型解压完成"
         fi
         
@@ -66,15 +66,16 @@ jobs:
     - name: 运行测试
       run: go test -v ./...
 
-    - name: 跨平台构建
+    - name: 跨平台构建  
       run: |
         echo "🔨 开始跨平台构建..."
+        # 模型文件已在上一步下载完成，直接构建
         make build-all
 
     - name: 创建分平台发布包
       run: |
         echo "📦 创建分平台发布包..."
-        make prepare-models
+        # 模型文件已经在构建时准备好了
         
         # 手动执行发布打包逻辑（避免依赖 make release）
         cd dist
