✅ 包含 config.yaml 到发布包，实现真正开箱即用
✨ 主要更改：
- 修改 .gitignore：允许 config.yaml 进入 Git 版本控制
- 将 config.yaml 添加到 Git 跟踪，提供默认配置
- 更新 Makefile：所有平台发布包都包含 config.yaml
- 更新 GitHub Actions：发布包包含 config.yaml
- 更新 README：文档反映包含配置文件的设计

🚀 用户体验提升：
- 用户下载解压后直接可用，无需手动创建配置
- 不再显示 '配置文件不存在' 警告
- 提供合理的默认配置，用户可根据需要修改

📦 完整发布包内容：
- 可执行文件（轻量化设计）
- 默认配置文件 (config.yaml)
- 预下载模型文件
- 真正的开箱即用体验

--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ dist/
 logs/
 *.log
 
-# 配置文件（保留示例）
-config.yaml
+# 配置文件（包含默认配置，用户可以修改）
+# config.yaml 现在包含在 Git 中提供默认配置
 !config.example.yaml
 
 # Cookies 和用户数据
